yamls/cicd-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo-svc
  labels:
    app: cicd-demo
    service: cicd-demo
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: cicd-demo
---
