yamls/cicd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cicd-demo
spec:
  hosts:
  - "*"
  gateways:
  - cicd-gateway
  http:
  - route:
    - destination:
        host: cicd-demo-svc
        port:
          number: 8080
